# mathematica-data

./: mathematica-data.cabal
exe/: mathematica-data.hs
lib/Application/Mathematica/Parse/: Command.hs  Job.hs  ProgType.hs
lib/Data/: Mathematica.hs
lib/Data/Mathematica/: Command.hs  Job.hs  Parser.hs  Type.hs
test/: test.hs
