Name:		mathematica-data
Version:	0.0.2.999
Synopsis:	Parsing Mathematica .dat files
Description: 	Parsing Mathematica .dat files 
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     


Executable mathematica-data
  Main-is: mathematica-data.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends:   base>4, mtl>2, directory, filepath,
                   cmdargs, mathematica-data

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends:   base>4, mtl>2, directory, filepath,
                   cmdargs, attoparsec, bytestring
  Exposed-Modules: 
                   Application.Mathematica.Parse.ProgType
                   Application.Mathematica.Parse.Job
                   Application.Mathematica.Parse.Command
                   Data.Mathematica
                   Data.Mathematica.Parser
  Other-Modules: 

 
		 