Name:		mathematica-data
Version:	0.0.999
Synopsis:	Parsing Mathematica .dat files
Description: 	Parsing Mathematica .dat files 
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     


Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends:   base == 4.*, 
                   attoparsec >= 0.10, 
                   bytestring >= 0.9
  Exposed-Modules: 
                   Data.Mathematica
                   Data.Mathematica.Parser
  Other-Modules: 

 
		 